--- a/styles/header/_header.scss
+++ b/styles/header/_header.scss
@@ -5,7 +5,8 @@
     height: 7rem;
 
     &__nav {
-        width: 100%;
+        max-width: 1420px;
+        margin: 0 auto;
 
         p {
             display: none;
@@ -20,7 +21,7 @@
     align-items: center;
     background-color: #fff;
     width: 100%;
-    max-width: 88.75rem;
+    max-width: 1420px;
     z-index: 9;
 
 
@@ -122,6 +123,8 @@
 }
 
 
+
+
 @media screen and (min-width: 1000px) {
     .header {
         display: block;
@@ -134,7 +137,7 @@
 
             p {
                 display: block;
-                padding: .5rem 5rem 0 5rem;
+                padding: 1rem 0 0;
                 color: #fff;
             }
         }
@@ -184,17 +187,22 @@
 
         &__right {
 
-
             img {
                 width: 2rem;
                 height: 2rem;
             }
         }
-
     }
 
     .fixed {
         position: fixed;
-        transition: all 0.5s ease-in;
+        transition: all 3s ease-out;
+        z-index: 10;
+        // transform: translate3d(0, -100%, 0);
+    }
+
+    .normal {
+        position: static;
+        transition: all 3s ease-out;
     }
 }
